# trailine-research

./: .gitignore  LICENSE  README.md  pyproject.toml
datas/processed/tracks/관악산/: 관악산-관악산전망대-헬리포트.json  관악산-사당능선입구-관악산전망대.json  관악산-연주대-연주암.json  관악산-연주암-제2약수터.json  관악산-제2약수터-과천향교.json  관악산-헬리포트-연주대.json
datas/processed/tracks/설악산/: 설악산-남설악탐방지원센터-오색1쉼터.json  설악산-대청봉-중청.json  설악산-봉정암-해탈고개.json  설악산-설악06-06-대청봉.json  설악산-소청-봉정암.json  설악산-수렴동대피소-영시암.json  설악산-영시암-백담탐방지원센터.json  설악산-오색1쉼터-설악06-06.json  설악산-중청-소청.json  설악산-해탈고개-수렴동대피소.json
datas/processed/waypoints/: list.csv
datas/raw/json/: 관악산-사당-과천코스.json  설악산-오색-백담코스.json
notebooks/: check_track_is_work_well.ipynb
scripts/: preprocess_raw.py
src/trailine/: exc.py  graph_map.py  io.py  preprocess.py  schemas.py  utils.py  vars.py
tests/: test_graph_map.py
