[project]
name = "trailine-research"
version = "0.1.0"
description = "Trailine 프로젝트에 사용될 코스 분석 관련 저장소"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "haversine>=2.9.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pydantic>=2.11.10",
    "pyright>=1.1.406",
]

[tool.setuptools]
package-dir = {"" = "src", "scripts" = "scripts"}
packages = ["trailine", "scripts"]

[project.scripts]
preprocess-raw = "scripts.preprocess_raw:main"

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
]
notebook = [
    "jupyterlab>=4.4.9",
]
visual = [
    "folium>=0.20.0",
    "matplotlib>=3.10.6",
]
script = [
    "typer>=0.19.2",
]
